# cchan

./: GoStyleChannel.h  README.md  UnboundedGoStyleChannel.h  semaphore.h
example/: CMakeLists.txt  go_style_channel_example.cc  go_style_channel_lambda_example.cc
