CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

LIST(APPEND CMAKE_PREFIX_PATH "/volume/software/common/cmake/$ENV{DLRRM_HOST_PLATFORM}")

PROJECT(cchan_example)

SET(CMAKE_CXX_COMPILER clang)
SET(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(Boost REQUIRED COMPONENTS thread system)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/..)

ADD_EXECUTABLE(${PROJECT_NAME} go_style_channel_example.cc)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    ${Boost_LIBRARIES}
    stdc++)
